test/success/loop/empty_loop/main.sk
module Main {

fn main() {
    loop {
        break;
    };
}

}