test/errors/safety/unnecessary_safe/main.sk
module Main {

@safe
fn main() {
}

}